--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,15 @@ __pycache__/
 *.swo
 *.swn
 *.vim
+*~
 
-# launch script
+# launch scripts
 run.sh
+*.sh
+*.json
 
+# result folders
+exp*
 
 data/
 .idea/
